samples/_failures_safe/1761254799_b88ef1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1cbaa2f7.c: In function ‘token_type_to_string’:
./samples/SAFE/__tmp_1cbaa2f7.c:181:35: error: missing terminating " character
  181 |         case TOKEN_NUMBER: return "N
      |                                   ^~
./samples/SAFE/__tmp_1cbaa2f7.c:181:9: error: expected expression at end of input
  181 |         case TOKEN_NUMBER: return "N
      |         ^~~~
./samples/SAFE/__tmp_1cbaa2f7.c:181:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1cbaa2f7.c:181:9: error: expected declaration or statement at end of input
